--- a/app/views/comic_books/show.html.erb
+++ b/app/views/comic_books/show.html.erb
@@ -10,3 +10,31 @@
                     turbo_confirm: "Are you sure?"
                   } %></li>
 </ul>
+
+<h2>Borrower</h2>
+<% @comic_books.borrowers do |borrower| %>
+  <p>
+    <strong>Borrower:</strong>
+    <%= borrower.borrower %>
+  </p>
+
+  <p>
+    <strong>Borrower:</strong>
+    <%= borrower.body %>
+  </p>
+<% end %>
+
+h2>Add a borrower:</h2>
+<%= form_with model: [ @comic_books, @comic_books.borrower.build ] do |form| %>
+  <p>
+    <%= form.label :borrower %><br>
+    <%= form.text_field :borrower %>
+  </p>
+  <p>
+    <%= form.label :body %><br>
+    <%= form.text_area :body %>
+  </p>
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
